2004-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDsigC14NTransformTest.cs,
	  XmlDsigC14NWithCommentsTransformTest.cs:
	  uncommented some code blocks which should be tested.

2004-02-11  Sebastien Pouliot  <sebastien@ximian.com>

	* KeyInfoTest.cs: Corrected the xmlRSA XML string.
	* ReferenceTest.cs: Tests fixed if XML is different (but equivalent)
	to MS implementation.
	* SignatureTest.cs: Tests fixed if XML is different (but equivalent) 
	to MS implementation.
	* XmlDsigBase64TransformTest.cs: New UnprotectedGetInnerXml class to get
	results from the protected GetInnerXml. No more convertion to arrays.
	* XmlDsigC14NTransformTest.cs: New UnprotectedGetInnerXml class to get
	results from the protected GetInnerXml. Fixed input/output typo. Tests
	fixed if XML is different (but equivalent) to MS implementation.
	* XmlDsigC14NWithCommentsTransformTest.cs: New UnprotectedGetInnerXml 
	class to get results from the protected GetInnerXml. Fixed input/output
	typo.
	* XmlDsigXPathTransformTest.cs: New. Unit tests XmlDsigXPathTransform.
	* XmlDsigXsltTransformTest.cs: New UnprotectedGetInnerXml class to get 
	results from the protected GetInnerXml. Fixed input/output typo.

2003-12-14  Sebastien Pouliot  <spouliot@videotron.ca>

	* SignedXmlTest.cs: Added a new unit test to verify both bugs (no
	key assigned on verification and GetElementId) found when fixing 
	#52084.

2003-07-28  Sebastien Pouliot  <spouliot@videotron.ca>

	* XmlDsigC14NTransformTest.cs: Corrected test for .NET 1.1 (that was a 
	bug in .NET 1.0). There are no more unit test failures on Windows.

2003-07-27  Sebastien Pouliot  <spouliot@videotron.ca>

	* KeyInfoTest.cs: Added #if NET_1_0 for the RetrievalMethod bug.

2003-07-24  Sebastien Pouliot  <spouliot@videotron.ca>

	* XmlDsigC14NTransformTest.cs: New tests from Aleksey Sanin.
	* XmlDsigC14NWithCommentsTransformTest.cs: New tests from
	Aleksey Sanin.

2003-06-02  Sebastien Pouliot  <spouliot@videotron.ca>
